Changelog
=========


2.3 (unreleased)
----------------

- Nothing changed yet.


2.2 (2012-02-27)
----------------

- Adjust the is_issuer in the transitioncontroller:
  it can now handle also inbox principals.
  Issue #1387 Mandantenuebergreifende Weiterleitung: Wizards erstellen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1387
  [phgross]

- Adjust the statesyncer: forwarding predesscors should not be synced.
  [phgross]

- Add "predecessor" index and metadata to catalog.
  [jone]

- Disable close_successor_wizard for forwarding successor tasks.
  Issue #1387 Mandantenuebergreifende Weiterleitung: Wizards erstellen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1387
  [phgross]

- When completing a successor task, let the user report all documents in the dossier.
  Issue #1344 Aufgabe erledigen bzw. abschliessen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1344
  [jone]

- Display special icon for related items in task responses
  [lgraf]

- Fixed bug that caused previous relatedItems to be overridden when adding
  a relation in a task response.
  [lgraf]

- Use subtask icon in add-menu.
  [jone]

- Added French translations
  [ttschanz]

- Add is_subtask catalog index.
  Issue #1373 Spezielles Icon fuer Unteraufgaben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1373
  [jone]

- Add "assigned_client" index to metadata (used for remote-task icon).
  Issue #1300 Mandantenuebergreifende Aufgaben sollten speziell markiert werden koennen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1300
  [jone]

- Adjust Worfklow: Allow resolved-in-progress also for reponsible or inbox group users.
  Issue #1371 Anpassungen Aufgaben Workflow
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1371
  [phgross]

- Adjust Worfklow: Disallow to add documents when a task is resolved.